Create Yo from htree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,13 @@
-project(htree)
-cmake_minimum_required(VERSION 2.8)
+project(yo)
+cmake_minimum_required(VERSION 3.0)
 
 enable_testing()
 
-set(HTREE_VERSION_MAJOR "1")
-set(HTREE_VERSION_MINOR "2")
+set(YO_VERSION_MAJOR "0")
+set(YO_VERSION_MINOR "1")
 
 
-option(HTREE_STATIC_BUILD "Enable or disable htree static binary" OFF)
-
-add_definitions( -DHTREE_VERSION_MAJOR=\"${HTREE_VERSION_MAJOR}\" -DHTREE_VERSION_MINOR=\"${HTREE_VERSION_MINOR}\")
+add_definitions( -DYO_VERSION_MAJOR=\"${YO_VERSION_MAJOR}\" -DYO_VERSION_MINOR=\"${YO_VERSION_MINOR}\")
 
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake
@@ -18,18 +16,12 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake
       ${PROJECT_SOURCE_DIR}/CMake/config)
 
 
-include(BlueGenePortability)
 include(DefineInstallationPaths)
 include(ReleaseDebugAutoFlags)
 include(DetectCXX11Support)
 
 find_package(Threads)
 
-if(HTREE_STATIC_BUILD)
-        set(HTREE_STATIC_PREFIX "STATIC_")
-        set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS )
-	set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS " -static -static-libgcc -static-libstdc++ -Wl,--whole-archive -lpthread -Wl,--no-whole-archive")
-endif()
 
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -45,10 +37,23 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/deps/hadoken/include  )
 
 include_directories(SYSTEM ${BOOST_INCLUDE_DIR} )
 
-set(htree_version_src "${CMAKE_CURRENT_SOURCE_DIR}/src/htree.cpp")
-add_executable(htree ${htree_version_src} ${HTREE_HEADERS_1} ${HTREE_HEADERS_2})
-target_link_libraries(htree ${CMAKE_THREAD_LIBS_INIT})
-install(TARGETS htree DESTINATION ${BIN_INSTALL_DIR}/)
+#
+# libyo library
+#
+set(libyo_src "${CMAKE_CURRENT_SOURCE_DIR}/src/yo.cpp")
 
+add_library(libyo ${libyo_src} ${YO_HEADERS_1} ${YO_HEADERS_2})
+target_link_libraries(libyo ${CMAKE_THREAD_LIBS_INIT})
+install(TARGETS libyo DESTINATION ${LIB_INSTALL_DIR}/)
+
+
+# yocp tool
+set(yocp_src "${CMAKE_CURRENT_SOURCE_DIR}/src/yocp.cpp")
+
+add_executable(yocp ${yocp_src} ${YO_HEADERS_1} ${YO_HEADERS_2})
+target_link_libraries(yocp ${CMAKE_THREAD_LIBS_INIT} libyo)
+
+
+install(TARGETS yocp DESTINATION ${BIN_INSTALL_DIR}/)
 
 
