Initial import for python and add auto creation for dest-file if directory path is used

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/hadoken"]
 	path = deps/hadoken
 	url = https://github.com/adevress/hadoken
+[submodule "deps/pybind11"]
+	path = deps/pybind11
+	url = https://github.com/pybind/pybind11
