First valid python implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,10 +92,11 @@ set_target_properties(pyyo PROPERTIES
     PREFIX "")
 target_include_directories(pyyo PRIVATE ${PYTHON_INCLUDE_DIRS})
 
-FILE(GLOB PY_FILES "python/*.py")
+FILE(GLOB PY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/*.py")
 
 
-install(TARGETS pyyo DESTINATION ${LIB_INSTALL_DIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE})
+install(TARGETS pyyo DESTINATION ${LIB_INSTALL_DIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
+install(FILES ${PY_FILES} DESTINATION ${LIB_INSTALL_DIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
 
 ## install headers
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/yo DESTINATION ${INCLUDE_INSTALL_DIR})
