yo pkgconfig inclusion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,3 +100,9 @@ install(FILES ${PY_FILES} DESTINATION ${LIB_INSTALL_DIR}/${CMAKE_INSTALL_PYTHON_
 
 ## install headers
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/yo DESTINATION ${INCLUDE_INSTALL_DIR})
+
+
+## pkgconfig
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/yo.pc.in ${CMAKE_CURRENT_BINARY_DIR}/yo.pc @ONLY)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/yo.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig/)
+
