Add properly numpio submoduel for yo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,10 +94,12 @@ set_target_properties(pyyo PROPERTIES
 target_include_directories(pyyo PRIVATE ${PYTHON_INCLUDE_DIRS})
 
 FILE(GLOB PY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/*.py")
+FILE(GLOB PY_NUMPY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/numpyio/*.py")
 
 
 install(TARGETS pyyo DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
 install(FILES ${PY_FILES} DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
+install(FILES ${PY_NUMPY_FILES} DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo/numpyio)
 
 ## install headers
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/yo DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR})
