--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,9 +97,9 @@ FILE(GLOB PY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/*.py")
 FILE(GLOB PY_NUMPY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/numpyio/*.py")
 
 
-install(TARGETS pyyo DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
-install(FILES ${PY_FILES} DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
-install(FILES ${PY_NUMPY_FILES} DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo/numpyio)
+install(TARGETS pyyo DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
+install(FILES ${PY_FILES} DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
+install(FILES ${PY_NUMPY_FILES} DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo/numpyio)
 
 ## install headers
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/yo DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR})
