--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,11 +95,14 @@ target_include_directories(pyyo PRIVATE ${PYTHON_INCLUDE_DIRS})
 
 FILE(GLOB PY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/*.py")
 FILE(GLOB PY_NUMPY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/numpyio/*.py")
-
+FILE(GLOB PY_PICKLE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/pickleio/*.py")
+FILE(GLOB PY_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/test/*.py")
 
 install(TARGETS pyyo DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
 install(FILES ${PY_FILES} DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo)
 install(FILES ${PY_NUMPY_FILES} DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo/numpyio)
+install(FILES ${PY_PICKLE_FILES} DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo/pickleio)
+install(FILES ${PY_TEST_FILES} DESTINATION ${CMAKE_INSTALL_PYTHON_SITE_PACKAGE}/yo/test)
 
 ## install headers
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/yo DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR})
